# coral-camera

./: CMakeLists.txt  LICENSE  Makefile  README.md
src/: camerastreamer.cc  camerastreamer.h  inferencewrapper.cc  inferencewrapper.h  main.cc
